--- a/Notebooks/Vertex-AI.ipynb
+++ b/Notebooks/Vertex-AI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "b35c21cd",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "7859fc57",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "8c53cabf",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "f19ac673",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "12a5bbb6",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "d21069ed",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "916a54aa",
    "metadata": {},
    "outputs": [
@@ -233,19 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "305a412c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'aiplatform' from 'google.cloud' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgoogle\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcloud\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m aiplatform\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Initialize Vertex AI client with your temporary/staging bucket\u001b[39;00m\n\u001b[32m      4\u001b[39m aiplatform.init(project=PROJECT_ID, location=REGION, staging_bucket=TEMP_BUCKET)\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'aiplatform' from 'google.cloud' (unknown location)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating PipelineJob\n",
+      "PipelineJob created. Resource name: projects/951195898169/locations/us-central1/pipelineJobs/spotify-churn-pipeline-lr-20251016163743\n",
+      "To use this PipelineJob in another session:\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/951195898169/locations/us-central1/pipelineJobs/spotify-churn-pipeline-lr-20251016163743')\n",
+      "View Pipeline Job:\n",
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/spotify-churn-pipeline-lr-20251016163743?project=951195898169\n",
+      "PipelineJob projects/951195898169/locations/us-central1/pipelineJobs/spotify-churn-pipeline-lr-20251016163743 current state:\n",
+      "3\n",
+      "PipelineJob projects/951195898169/locations/us-central1/pipelineJobs/spotify-churn-pipeline-lr-20251016163743 current state:\n",
+      "3\n",
+      "PipelineJob projects/951195898169/locations/us-central1/pipelineJobs/spotify-churn-pipeline-lr-20251016163743 current state:\n",
+      "3\n",
+      "PipelineJob projects/951195898169/locations/us-central1/pipelineJobs/spotify-churn-pipeline-lr-20251016163743 current state:\n",
+      "3\n"
      ]
     }
    ],
