New setup for only using the "best_model.pkl"

--- a/Spotify-MLOps/ML-pipeline/spotify-churn.ipynb
+++ b/Spotify-MLOps/ML-pipeline/spotify-churn.ipynb
@@ -319,7 +319,7 @@
     "    \n",
     "    # Save model\n",
     "    model_out.metadata[\"file_type\"] = \".pkl\"\n",
-    "    model_out.metadata[\"algo\"] = \"model_rf\"\n",
+    "    model_out.metadata[\"algo\"] = \"best_model\"\n",
     "    joblib.dump(model, model_out.path + \".pkl\")\n",
     "    \n",
     "    outputs = NamedTuple('outputs', metrics=dict)\n",
@@ -383,7 +383,7 @@
     "    \n",
     "    # Save model\n",
     "    model_out.metadata[\"file_type\"] = \".pkl\"\n",
-    "    model_out.metadata[\"algo\"] = \"model_lr\"\n",
+    "    model_out.metadata[\"algo\"] = \"best_model\"\n",
     "    joblib.dump(model, model_out.path + \".pkl\")\n",
     "    \n",
     "    outputs = NamedTuple('outputs', metrics=dict)\n",
