updated new pipeline to fix bug

--- a/Spotify-MLOps/ML-pipeline/spotify-churn copy.ipynb
+++ b/Spotify-MLOps/ML-pipeline/spotify-churn copy.ipynb
@@ -562,7 +562,7 @@
    "id": "d160e07a",
    "metadata": {},
    "source": [
-    "### Download Production Model from GCS"
+    "#### Download Production Model from GCS"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "id": "6d4fd03f",
    "metadata": {},
    "source": [
-    "### Evaluate Production Model"
+    "#### Evaluate Production Model"
    ]
   },
   {
@@ -670,7 +670,7 @@
    "id": "1f2bb4e8",
    "metadata": {},
    "source": [
-    "### Compare Winner vs Production Baseline"
+    "#### Compare Winner vs Production Baseline"
    ]
   },
   {
@@ -739,7 +739,7 @@
    "id": "e71ed599-9cd0-4215-a17d-1a8baaa2c76c",
    "metadata": {},
    "source": [
-    "### Upload Model and Metrics to Google Bucket "
+    "#### Upload Model and Metrics to Google Bucket "
    ]
   },
   {
@@ -837,70 +837,107 @@
     "        bucket_name=model_repo\n",
     "    ).after(compare_op)\n",
     "    \n",
-    "    # Step 7: Evaluate production model on test set (only if baseline exists)\n",
-    "    with dsl.If(download_prod_op.outputs[\"Output\"] == \"BASELINE_EXISTS\"):\n",
-    "        eval_prod_rf_op = evaluate_production_model(\n",
-    "            model=download_prod_op.outputs[\"production_model\"],\n",
-    "            test_data=split_op.outputs[\"test_data\"]\n",
-    "        )\n",
-    "    \n",
-    "    # Step 8a: Compare winner (RF) against baseline\n",
+    "    # Step 7: Handle RF winner\n",
     "    with dsl.If(compare_op.output == \"RF\"):\n",
-    "        # If baseline exists, compare; otherwise get dummy metrics\n",
+    "        # Check if baseline exists\n",
     "        with dsl.If(download_prod_op.outputs[\"Output\"] == \"BASELINE_EXISTS\"):\n",
-    "            baseline_compare_rf = compare_with_baseline(\n",
+    "            # Evaluate production model\n",
+    "            eval_prod_op = evaluate_production_model(\n",
+    "                model=download_prod_op.outputs[\"production_model\"],\n",
+    "                test_data=split_op.outputs[\"test_data\"]\n",
+    "            )\n",
+    "            \n",
+    "            # Compare with baseline\n",
+    "            baseline_compare = compare_with_baseline(\n",
     "                new_model_metrics=predict_rf_op.outputs[\"metrics\"],\n",
-    "                production_metrics=eval_prod_rf_op.outputs[\"metrics\"],\n",
+    "                production_metrics=eval_prod_op.outputs[\"metrics\"],\n",
     "                baseline_status=download_prod_op.outputs[\"Output\"]\n",
     "            )\n",
+    "            \n",
+    "            # Upload if approved\n",
+    "            with dsl.If(baseline_compare.output == \"DEPLOY\"):\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=train_rf_op.outputs[\"model_out\"]\n",
+    "                )\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=split_op.outputs[\"scaler_out\"]\n",
+    "                )\n",
+    "        \n",
+    "        # No baseline exists - deploy directly\n",
     "        with dsl.Else():\n",
-    "            baseline_compare_rf = compare_with_baseline(\n",
+    "            baseline_compare_no_base = compare_with_baseline(\n",
     "                new_model_metrics=predict_rf_op.outputs[\"metrics\"],\n",
-    "                production_metrics={\"test_f1_score\": 0.0},  # Dummy\n",
+    "                production_metrics={\"test_f1_score\": 0.0},\n",
     "                baseline_status=\"NO_BASELINE\"\n",
     "            )\n",
-    "        \n",
-    "        # Upload RF model only if approved\n",
-    "        with dsl.If(baseline_compare_rf.output == \"DEPLOY\"):\n",
-    "            upload_to_gcs(\n",
-    "                project_id=project_id,\n",
-    "                bucket_name=model_repo,\n",
-    "                artifact=train_rf_op.outputs[\"model_out\"]\n",
-    "            )\n",
-    "            upload_to_gcs(\n",
-    "                project_id=project_id,\n",
-    "                bucket_name=model_repo,\n",
-    "                artifact=split_op.outputs[\"scaler_out\"]\n",
-    "            )\n",
+    "            \n",
+    "            # Upload (will always be DEPLOY for NO_BASELINE)\n",
+    "            with dsl.If(baseline_compare_no_base.output == \"DEPLOY\"):\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=train_rf_op.outputs[\"model_out\"]\n",
+    "                )\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=split_op.outputs[\"scaler_out\"]\n",
+    "                )\n",
     "    \n",
-    "    # Step 8b: Compare winner (LR) against baseline\n",
+    "    # Step 8: Handle LR winner\n",
     "    with dsl.If(compare_op.output == \"LR\"):\n",
-    "        # If baseline exists, compare; otherwise get dummy metrics\n",
+    "        # Check if baseline exists\n",
     "        with dsl.If(download_prod_op.outputs[\"Output\"] == \"BASELINE_EXISTS\"):\n",
+    "            # Evaluate production model\n",
+    "            eval_prod_op_lr = evaluate_production_model(\n",
+    "                model=download_prod_op.outputs[\"production_model\"],\n",
+    "                test_data=split_op.outputs[\"test_data\"]\n",
+    "            )\n",
+    "            \n",
+    "            # Compare with baseline\n",
     "            baseline_compare_lr = compare_with_baseline(\n",
     "                new_model_metrics=predict_lr_op.outputs[\"metrics\"],\n",
-    "                production_metrics=eval_prod_rf_op.outputs[\"metrics\"],\n",
+    "                production_metrics=eval_prod_op_lr.outputs[\"metrics\"],\n",
     "                baseline_status=download_prod_op.outputs[\"Output\"]\n",
     "            )\n",
+    "            \n",
+    "            # Upload if approved\n",
+    "            with dsl.If(baseline_compare_lr.output == \"DEPLOY\"):\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=train_lr_op.outputs[\"model_out\"]\n",
+    "                )\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=split_op.outputs[\"scaler_out\"]\n",
+    "                )\n",
+    "        \n",
+    "        # No baseline exists - deploy directly\n",
     "        with dsl.Else():\n",
-    "            baseline_compare_lr = compare_with_baseline(\n",
+    "            baseline_compare_lr_no_base = compare_with_baseline(\n",
     "                new_model_metrics=predict_lr_op.outputs[\"metrics\"],\n",
-    "                production_metrics={\"test_f1_score\": 0.0},  # Dummy\n",
+    "                production_metrics={\"test_f1_score\": 0.0},\n",
     "                baseline_status=\"NO_BASELINE\"\n",
     "            )\n",
-    "        \n",
-    "        # Upload LR model only if approved\n",
-    "        with dsl.If(baseline_compare_lr.output == \"DEPLOY\"):\n",
-    "            upload_to_gcs(\n",
-    "                project_id=project_id,\n",
-    "                bucket_name=model_repo,\n",
-    "                artifact=train_lr_op.outputs[\"model_out\"]\n",
-    "            )\n",
-    "            upload_to_gcs(\n",
-    "                project_id=project_id,\n",
-    "                bucket_name=model_repo,\n",
-    "                artifact=split_op.outputs[\"scaler_out\"]\n",
-    "            )"
+    "            \n",
+    "            # Upload (will always be DEPLOY for NO_BASELINE)\n",
+    "            with dsl.If(baseline_compare_lr_no_base.output == \"DEPLOY\"):\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=train_lr_op.outputs[\"model_out\"]\n",
+    "                )\n",
+    "                upload_to_gcs(\n",
+    "                    project_id=project_id,\n",
+    "                    bucket_name=model_repo,\n",
+    "                    artifact=split_op.outputs[\"scaler_out\"]\n",
+    "                )"
    ]
   },
   {
