--- a/Report/DE-MLOps-group5.qmd
+++ b/Report/DE-MLOps-group5.qmd
@@ -82,6 +82,8 @@ Continuous integration and deployment are managed through Cloud Build. The confi
 
 Each configuration uses substitution variables (\_REPOSITORY, \_LOCATION, \_MODEL_REPO, \_CONF_REPO, \_TEMP_REPO) to define repository paths, region, and storage locations. Triggers run automatically on pushes to the main branch or can be executed manually.
 
+To further automate the retraining workflow, a **Pub/Sub notification** was added on the data bucket (spotify_data_25). When new or updated data is uploaded, a Cloud Storage event of type OBJECT_FINALIZE publishes a message to the topic spotify-data-updates. This message automatically triggers the Cloud Build configuration file spotify_churn_pipeline_execution_cloudbuild.json, which executes the Vertex AI pipeline through the pipeline-executor container. As a result, the entire process of data ingestion, preprocessing, model retraining, and redeployment occurs autonomously whenever new data becomes available, enabling continuous training without manual intervention
+
 This integrated setup ensures that any change in data or code automatically triggers model retraining and redeployment. The workflow combines modular pipelines, automated testing, and scalable serving, fulfilling the MLOps principles of automation, reproducibility, and continuous improvement.
 
 ### **Pipeline Executor Container**
@@ -98,13 +100,13 @@ This component forms the operational link between Cloud Build automation and Ver
 
 ### **Alternative Designs**
 
-Several alternative designs could have been applied to improve modularity and scalability. One option would be to serve the trained model through Vertex AI Endpoints instead of a containerized Flask API on Cloud Run. Vertex AI Endpoints provide a managed serving environment that handles scaling, versioning, and monitoring automatically, which reduces operational overhead (Datatonic, 2022; Google Cloud, 2024). However, this approach limits flexibility in defining custom preprocessing, authentication, or multi-model routing logic. By contrast, the Flask API on Cloud Run offers full control over request handling and integration with the Prediction UI, at the cost of higher maintenance effort.
+Several alternative designs could have been applied to improve modularity and scalability. One option would be to serve the trained model through Vertex AI Endpoints instead of a containerized Flask API on Cloud Run. Vertex AI Endpoints provide a managed serving environment that handles scaling, versioning, and monitoring automatically, which reduces operational overhead (Datatonic, 2022; Google Cloud, 2024). However, this approach limits flexibility in defining custom preprocessing, authentication, or multi-model routing logic, also the costs are very high for using this technique . By contrast, the Flask API on Cloud Run offers full control over request handling and integration with the Prediction UI, at the cost of higher maintenance effort but cheaper.
 
 The current design already incorporates conditional logic within the Vertex AI pipeline, ensuring that newly trained models are deployed only if they outperform the current production model. This approach safeguards against performance degradation and reflects recommended practices for continuous deployment in machine learning systems (Google Cloud, 2024). While this evaluation logic resides inside the pipeline, separating Cloud Build triggers for training and deployment could further improve modularity and reduce runtime complexity by allowing independent updates to either process (Datatonic, 2022; Google Cloud, 2024).
 
 ### **Improvements and Scalability**
 
-While the current system is fully functional, several improvements could further enhance performance and maintainability. From a model perspective, including categorical user features such as country, device type, or subscription type could capture more behavioral variance and improve churn prediction accuracy. From an operational perspective, implementing model versioning in Google Cloud Storage would support traceability and rollback functionality. Furthermore, introducing drift detection and basic endpoint testing within the CI/CD pipeline would strengthen reliability and early error detection. Finally, integrating environment variables and Secret Manager for secure configuration would align the system with best practices for production-grade MLOps. Finally, incorporating systematic unit testing for components such as the Prediction API and the pipeline executor would strengthen the system's robustness and support production-grade reliability, ensuring early detection of logic errors and integration issues.
+While the current system is fully functional, several improvements could further enhance performance and maintainability. From a model perspective, including categorical user features such as country, device type, or subscription type could capture more behavioral variance and improve churn prediction accuracy. From an operational perspective, implementing model versioning in Google Cloud Storage would support traceability and rollback functionality. Furthermore, introducing drift detection and basic endpoint testing within the CI/CD pipeline would strengthen reliability and early error detection. Finally, integrating environment variables and Secret Manager for secure configuration would align the system with best practices for production-grade MLOps. Additionally, incorporating systematic unit testing for components such as the Prediction API and the pipeline executor would strengthen the system's robustness and support production-grade reliability, ensuring early detection of logic errors and integration
 
 ### **Reflection on Implementation Process**
 
